--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 .DS_Store
+/Billing.class
+/CartManager.class
+/Config.class
+/FileUtility.class
+/Inventory.class
+/Item.class
+/Order.class
+/Utility.class
